--- a/CryptoWorkbench/data/help.html
+++ b/CryptoWorkbench/data/help.html
@@ -2,6 +2,40 @@
 <head>
 </head>
 <body>
-<p>Wheee</p>
+<h2>CryptoWorkbench Help</h2>
+
+<h3>rotateAlphabet(input, number = 13)</h3>
+
+<h3>replaceLetters(input, sourceLetterTable, outputLetterTable)</h3>
+<h3>ngramFrequency(input, n, frequencyLimit = 0)</h3>
+<h3>wordFrequency(input, frequencyLimit = 0)</h3>
+
+<h3>hash(input, algorithm)</h3>
+<ul>
+<li>0  - MD4</li>
+<li>1  - MD5</li>
+<li>2  - SHA-1</li>
+<li>3  - SHA-224</li>
+<li>4  - SHA-256</li>
+<li>5  - SHA-384</li>
+<li>6  - SHA-512</li>
+<li>7  - SHA3-224</li>
+<li>8  - SHA3-256</li>
+<li>9  - SHA3-384</li>
+<li>10 - SHA3-512</li>
+</ul>
+
+<h3>decodeHex(input)<h3>
+<h3>hex(input, format = 0)<h3>
+<ul>
+<li>0 - Hex</li>
+<li>1 - Hex with spaces</li>
+</ul>
+
+<h3>decodeBase64(input)<h3>
+<h3>base64(input)<h3>
+
+<h3>printable(input, placeholder = ".")<h3>
+
 </body>
 </html>
